<TinUI, a modern frame to render various widgets element for tkinter in one control.>
    Copyright (C) <2021-present>  <Smart-Space | Junming Zhang> <tsan-zane@outlook.com|smart-space@qq.com>
    2019（原型框架）2021（正式命名TinUI发布）
基于GPLv3和LGPLv3发布

==========更新日志==========


==========5.28==========
2025-
1. ratingbar增加返回背景元素
2. pivot增加选择函数

==========5.27==========
2025-5-12
1. 标准样式库添加back元素
2. ratingbar添加选择评级方法

==========5.26==========
2025-4-22
1. 修复treeview以子树结尾时展开错误的问题

==========5.25==========
2025-4-12
1. 修复tinuixmltest的正则表达式错误
2. togglebutton添加开关方法

==========5.24==========
2025-3-21
1. onoff可指定标识符字体大小
2. 修复listview删除最后一个元素后，仍然显示最后一个元素高度的问题
3. 修复listbox删除最后一个元素时发生的错误

==========5.23==========
2025-3-14
1. 修复entry, passwordbox提示线在TinUIXml下的错位问题
2. 修复spinbox强制锁定的问题

==========5.22==========
2025-3-9
1. 自带uixml的控件，在删除时也会删除TinUIXml
2. 修复theme错误
3. 修复对话框基类

==========5.21==========
2025-3-7
1. listbox添加清空功能
2. 基于TinUILight, TinUIDark的Dialog附加样式类
3. spinbox回车时，如果输入数据符合条件，则触发回调函数
4. radiobox方法增加select

==========5.20==========
2025-3-1
1. 修复listview清空或删除视图后页面元素仍占用内存的问题
2. 修复TinUIXml(allanchor)对齐方式分配id不唯一的问题

==========5.19==========
2025-2-27
1. listview增加清空方法
2. entry中有内容就显示删除按钮
3. 删除passwordbox输入判定
4. 优化entry, passwordbox提示符样式(不再支持linew参数)

==========5.18==========
2025-2-12
1. 修复列表选择对话框的尺寸错误问题
2. 超链接、菜单等包含函数类型的多接受类型参数，使用callable判断是否可调用
3. pivot初始化时不再自动触发选择
4. 浮出窗口在初始化后直接隐藏，等待调用
5. notebook标签标题与边框间隔2px

==========5.17==========
2025-2-8
1. TinUIXml下expander、flyout支持直接使用xml布局
2. 优化展示画廊配色，修改部分示例
3. 优化spinbox样式
4. 修复entry、passwordbox提示符颜色错误
5. button2添加过渡响应色
6. 如下控件按钮添加过渡响应色参数：
    button2, menu, menubutton, pipspager, expander,
    picker, barbutton
7. 如下控件背景适配改进贴合性：
    treeview, listbox(并且改为圆角边框), combobox,
    menu, menubutton
8. 修复TinUIXml下ui标签内绑定回调函数异常的错误
9. 修复treeview未选中时折叠和展开的错误
10. 修复togglebutton颜色转换时计算出错问题（防止溢出，对十六进制个位数补位）

==========5.15==========
2025-2-1
1. TinUIXml<line>对齐支持整体对齐，使用lineachor参数控制对齐方式，该值不会向内传递
2. 新增浮出ui控件 flyout
3. listbox允许初始化为0个元素