@@ -6,6 +6,12 @@
 ==========更新日志==========
 
 
+==========5.28==========
+2025-6-7
+1. ratingbar增加返回背景元素
+2. pivot增加选择函数
+3. entry, passwordbox增加过渡响应颜色
+
 ==========5.27==========
 2025-5-12
 1. 标准样式库添加back元素
